unpackaged/pre/first/objects/Network_District_Partnership__c.object
<CustomObject>
    <fields>
        <fullName>Church_Network__c</fullName>
        <label>Church Network</label>
        <referenceTo>Church_Network__c</referenceTo>
        <relationshipLabel>Network District Partnerships</relationshipLabel>
        <relationshipName>Network_District_Partnerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Discovered__c</fullName>
        <label>Date Discovered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Network District Partnerships</relationshipLabel>
        <relationshipName>Network_District_Partnerships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarter_Discovered__c</fullName>
        <formula>IF(ISBLANK(Date_Discovered__c),
&quot;&quot;,
IF(
AND(MONTH(Date_Discovered__c)&gt;0,MONTH(Date_Discovered__c)&lt;4),
&quot;Q1 - &quot;,
IF(
AND(MONTH(Date_Discovered__c)&gt;3,MONTH(Date_Discovered__c)&lt;7),
&quot;Q2 - &quot;,
IF(
AND(MONTH(Date_Discovered__c)&gt;6,MONTH(Date_Discovered__c)&lt;10),
&quot;Q3 - &quot;,
IF(
AND(MONTH(Date_Discovered__c)&gt;9,MONTH(Date_Discovered__c)&lt;13),
&quot;Q4 - &quot;,
&quot;&quot;
))))+TEXT(YEAR(Date_Discovered__c))
)</formula>
        <label>Quarter Discovered</label>
        <type>Text</type>
    </fields>
    <label>Network District Partnership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Church_Network__c</columns>
        <columns>District__c</columns>
        <columns>Date_Discovered__c</columns>
        <columns>Quarter_Discovered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NDP-{0000}</displayFormat>
        <label>Network District Partnership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network District Partnerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>